# lox-rs

./: .eslintignore  .eslintrc.js  .gitignore  Cargo.toml  README.md  main.lox  package-lock.json  package.json  start.sh  tsconfig.json  vue.config.js
examples/: closures.lox  language_overview.lox
interpreter/: Cargo.toml  class.rs  environment.rs  error.rs  expr.rs  function.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  resolver.rs  runtime_value.rs  statement.rs  token.rs  utils.rs
interpreter/src/: ast.rs  class.rs  environment.rs  error.rs  errors.rs  expr.rs  function.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  resolver.rs  runtime_value.rs  scanner.rs  statement.rs  token.rs  utils.rs
intp-www/: Cargo.toml  LICENSE_MIT
intp-www/src/: lib.rs
lox-rs-app/: index.js  package-lock.json  package.json
public/: index.html  interpreter_bg.wasm
src/: App.vue  main.ts  shims-vue.d.ts
src/components/: Buttons.vue  Console.vue
src/examples/: index.ts
src/router/: index.ts
src/store/: index.ts
src/styles/: colors.scss  index.scss
src/utils/: index.ts
src/views/: Home.vue
