[package]
name = "interpreter"
version = "0.1.0"
authors = ["Sniadek <karol.gruszka@dka.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "interpreter"
# path = "interpreter/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "interpreter/lib.rs"

[dependencies]
lazy_static = "1.3.0"
derive_more = "0.15.0"
pretty_assertions = "0.6.1"
enum-as-inner = "0.3.0"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
console_log = { version = "0.1", optional = true }
log = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]


[features]
default = ["console_error_panic_hook", "console_log"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"